# joiner-draft

./: .gitignore  Makefile  README.md  local_test.py  pyproject.toml
lambdas/signature_authorizer/: lambda_function.py
lambdas/webhook_consumer/: lambda_function.py
lambdas/webhook_consumer/joiner_bot/: __init__.py  secrets.py
lambdas/webhook_consumer/joiner_bot/allowlist/: __init__.py
lambdas/webhook_consumer/joiner_bot/context/: __init__.py
lambdas/webhook_consumer/joiner_bot/flow/: __init__.py
lambdas/webhook_consumer/joiner_bot/whatsapp/: __init__.py
lambdas/webhook_verification/: lambda_function.py
tests/unit/: test_allowlist.py  test_flow.py  test_handler.py
