[project]
name = "joiner"
version = "0.1.0"
description = "Joiner WhatsApp Bot — mono-repo for AWS Lambdas"
requires-python = ">=3.12"

[project.optional-dependencies]
webhook-consumer = [
    "boto3>=1.34",
    "requests>=2.31",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[sqs,secretsmanager,dynamodb]>=1.34",
    "moto[sqs,secretsmanager,dynamodb]>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "ARG", "BLE"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=lambdas --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*"]
